--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,6 @@
 {
   "ASCII_CHARS" : ["#", "?", "%", ".", "S", "+", ".", "*", ":", ",", "@", "="],
   "OUTPUT_WIDTH" : 50,
-  "DETAIL_PRIORITY" : 20
+  "DETAIL_PRIORITY" : 20,
+  "FRAME": 22
 }
